# cu_ris_lab1_navigation

cu_ris_lab1_navigation/: CMakeLists.txt  package.xml  requirements.repos
cu_ris_lab1_navigation/config/: exploration.rviz
cu_ris_lab1_navigation/config/flatland/: turtlebot.model.yaml  turtlebot_no_gt.model.yaml
cu_ris_lab1_navigation/launch/: scenario.launch
