<?xml version="1.0"?>
<package format="2">
  <name>cu_ris_lab1_navigation</name>
  <version>0.0.0</version>
  <description>The cu_ris_lab1_navigation package</description>

  <maintainer email="migoerner@constructor.university">Michael Goerner</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>flatland_server</exec_depend>
  <exec_depend>jsk_rviz_plugins</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>turtlebot_flatland</exec_depend>
  <exec_depend>turtlebot_description</exec_depend>
</package>
